--- a/flaskblog/static/main.css
+++ b/flaskblog/static/main.css
@@ -36,6 +36,10 @@ h1, h2, h3, h4, h5, h6 {
   color: #444444;
 }
 
+a{
+  text-decoration: none;
+}
+
 a.article-title:hover {
   color: #428bca;
   text-decoration: none;
